# lib/api-spec/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 info:
   title: Api
   version: 0.1.0
-  description: RentMitra API specification
+  description: RentNEarn API specification
 servers:
   - url: /api
     description: Base API path
@@ -1175,6 +1175,8 @@ components:
           type: string
         state:
           type: string
+        area:
+          type: ["string", "null"]
         pincode:
           type: ["string", "null"]
         latitude:
@@ -1273,6 +1275,8 @@ components:
           type: string
         state:
           type: string
+        area:
+          type: ["string", "null"]
         pincode:
           type: ["string", "null"]
         latitude:
@@ -1305,6 +1309,8 @@ components:
           type: string
         state:
           type: string
+        area:
+          type: ["string", "null"]
         pincode:
           type: ["string", "null"]
         latitude:
